Matchup restructured